--- a/index.html
+++ b/index.html
@@ -416,18 +416,18 @@
                     </p>
                 </div>
 
-                <!-- Mobile Development -->
+                <!-- Hosting and Maintenance -->
                 <div class="bg-gray-50 dark:bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-lg transition-shadow">
                     <div class="mb-6 text-center">
-                        <i class="fas fa-mobile-alt text-5xl bg-gradient-to-r from-cyan-400 to-blue-500 bg-clip-text text-transparent transform hover:scale-110 transition-transform"></i>
+                        <i class="fas fa-server text-5xl bg-gradient-to-r from-emerald-400 to-teal-500 bg-clip-text text-transparent transform hover:scale-110 transition-transform"></i>
                     </div>
                     <h3 class="text-xl font-semibold mb-3">
-                        <span x-show="language === 'en'">Mobile Solutions</span>
-                        <span x-show="language === 'ro'">Soluții Mobile</span>
+                        <span x-show="language === 'en'">Hosting & Maintenance</span>
+                        <span x-show="language === 'ro'">Găzduire & Mentenanță</span>
                     </h3>
                     <p class="text-gray-700 dark:text-gray-300">
-                        <span x-show="language === 'en'">Cross-platform and native mobile applications that extend your digital reach to all devices.</span>
-                        <span x-show="language === 'ro'">Aplicații mobile cross-platform și native care extind prezența ta digitală pe toate dispozitivele.</span>
+                        <span x-show="language === 'en'">Professional web hosting with 99.9% uptime, regular maintenance, security updates, and 24/7 monitoring to keep your digital presence running smoothly.</span>
+                        <span x-show="language === 'ro'">Găzduire web profesională cu disponibilitate de 99.9%, mentenanță regulată, actualizări de securitate și monitorizare 24/7 pentru a menține prezența dvs. digitală funcțională.</span>
                     </p>
                 </div>
             </div>
