--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQH2ENS4PG"></script>
@@ -25,8 +25,8 @@
 
 
     <meta charset="UTF-8">
+    <meta http-equiv="content-language" content="ro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cubevo Data Concept - Custom software development, web solutions, IT consulting, and infrastructure services">
     <title>Cubevo Data Concept | Modern Software Solutions</title>
 
     <!-- Tailwind CSS -->
@@ -171,7 +171,7 @@
 <body
     x-data="{
         darkMode: localStorage.getItem('darkMode') === 'true',
-        language: localStorage.getItem('language') || 'en',
+        language: localStorage.getItem('language') || 'ro',
         menuOpen: false
     }"
     x-init="
