--- a/index.html
+++ b/index.html
@@ -627,8 +627,8 @@
                             <span x-show="language === 'ro'">CUI: 40378484</span>
                         </li>
                         <li>
-                            <span x-show="language === 'en'">Chamber of Commerce No:</span>
-                            <span x-show="language === 'ro'">Nr. Reg. Com.:</span>
+                            <span x-show="language === 'en'">Chamber of Commerce No: J2019000010029</span>
+                            <span x-show="language === 'ro'">Nr. Reg. Com.: J2019000010029</span>
                         </li>
                         <li class="text-sm">
                             <span x-show="language === 'en'">Address: Calea Aurel Vlaicu 57, Bl. U5, Sc. A, Ap. 12, 310350, Arad, Romania</span>
