--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         </h3>
                         <p class="text-gray-600 dark:text-gray-400">
                             <span x-show="language === 'en'">Advanced online platform with integrated payment processing for niche services providers.</span>
-                            <span x-show="language === 'ro'">Platformă avansată cu procesare integrată a plăților pentru furnzori de servicii de nișate.</span>
+                            <span x-show="language === 'ro'">Platformă avansată cu procesare integrată a plăților pentru furnzori de servicii nișate.</span>
                         </p>
                     </div>
                 </div>
