--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <link rel="preload" href="https://cdn.tailwindcss.com" as="script">
     <link rel="preload" href="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" as="script">
 
-
     <meta charset="UTF-8">
     <meta http-equiv="content-language" content="ro">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -293,44 +292,44 @@
 
     <!-- Hero Section -->
     <section id="hero" class="pt-24 pb-16 md:pt-32 md:pb-24 bg-gradient-to-br from-blue-50 to-indigo-100 dark:from-gray-800 dark:to-gray-900 transition-colors duration-200">
-    <div class="container mx-auto px-4 flex flex-col md:flex-row items-center relative">
-        <!-- Left content -->
-        <div class="md:w-1/2 mb-8 md:mb-0 z-10">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4">
-                <span x-show="language === 'en'">Transforming Ideas into Digital Reality</span>
-                <span x-show="language === 'ro'">Transformăm Ideile în Realitate Digitală</span>
-            </h1>
-            <p class="text-xl mb-8 text-gray-700 dark:text-gray-300">
-                <span x-show="language === 'en'">We craft innovative software solutions tailored to your business needs.</span>
-                <span x-show="language === 'ro'">Creăm soluții software inovatoare adaptate nevoilor afacerii tale.</span>
-            </p>
-            <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
-                <a href="#contact" class="btn bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-lg text-center transition-colors duration-200">
-                    <span x-show="language === 'en'">Get Started</span>
-                    <span x-show="language === 'ro'">Începe Acum</span>
-                </a>
-                <a href="#services" class="btn border border-blue-600 text-blue-600 dark:text-blue-400 dark:border-blue-400 hover:bg-blue-50 dark:hover:bg-gray-800 py-3 px-6 rounded-lg text-center transition-colors duration-200">
-                    <span x-show="language === 'en'">Our Services</span>
-                    <span x-show="language === 'ro'">Serviciile Noastre</span>
-                </a>
+        <div class="container mx-auto px-4 flex flex-col md:flex-row items-center relative">
+            <!-- Left content -->
+            <div class="md:w-1/2 mb-8 md:mb-0 z-10">
+                <h1 class="text-4xl md:text-5xl font-bold mb-4">
+                    <span x-show="language === 'en'">Transforming Ideas into Digital Reality</span>
+                    <span x-show="language === 'ro'">Transformăm Ideile în Realitate Digitală</span>
+                </h1>
+                <p class="text-xl mb-8 text-gray-700 dark:text-gray-300">
+                    <span x-show="language === 'en'">We craft innovative software solutions tailored to your business needs.</span>
+                    <span x-show="language === 'ro'">Creăm soluții software inovatoare adaptate nevoilor afacerii tale.</span>
+                </p>
+                <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+                    <a href="#contact" class="btn bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-lg text-center transition-colors duration-200">
+                        <span x-show="language === 'en'">Get Started</span>
+                        <span x-show="language === 'ro'">Începe Acum</span>
+                    </a>
+                    <a href="#services" class="btn border border-blue-600 text-blue-600 dark:text-blue-400 dark:border-blue-400 hover:bg-blue-50 dark:hover:bg-gray-800 py-3 px-6 rounded-lg text-center transition-colors duration-200">
+                        <span x-show="language === 'en'">Our Services</span>
+                        <span x-show="language === 'ro'">Serviciile Noastre</span>
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <!-- Right content with cube -->
-        <div class="w-full md:w-1/2 flex justify-center items-center min-h-[300px] relative">
-            <div class="cube-container">
-                <div class="cube">
-                    <div class="face front"></div>
-                    <div class="face back"></div>
-                    <div class="face left"></div>
-                    <div class="face right"></div>
-                    <div class="face top"></div>
-                    <div class="face bottom"></div>
+            <!-- Hero section -->
+            <div class="w-full md:w-1/2 flex justify-center items-center min-h-[300px] relative">
+                <div class="cube-container">
+                    <div class="cube">
+                        <div class="face front"></div>
+                        <div class="face back"></div>
+                        <div class="face left"></div>
+                        <div class="face right"></div>
+                        <div class="face top"></div>
+                        <div class="face bottom"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Services Section -->
     <section id="services" class="py-16 bg-white dark:bg-gray-900 transition-colors duration-200">
@@ -433,6 +432,85 @@
             </div>
         </div>
     </section>
+
+    <!-- AI Solutions Section -->
+    <section id="ai-solutions" class="py-16 bg-gradient-to-br from-indigo-50 to-purple-100 dark:from-gray-800 dark:to-indigo-900 transition-colors duration-200">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-6">
+                <span x-show="language === 'en'">AI-Powered Solutions</span>
+                <span x-show="language === 'ro'">Soluții Bazate pe Inteligență Artificială</span>
+            </h2>
+
+            <p class="text-center text-gray-700 dark:text-gray-300 max-w-3xl mx-auto mb-12">
+                <span x-show="language === 'en'">Harness the power of artificial intelligence to transform your business processes and customer experiences.</span>
+                <span x-show="language === 'ro'">Valorificați puterea inteligenței artificiale pentru a transforma procesele de afaceri și experiențele clienților.</span>
+            </p>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Text-based Chatbots -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                    <div class="h-3 bg-gradient-to-r from-blue-500 to-indigo-600"></div>
+                    <div class="p-8">
+                        <div class="mb-6 text-center">
+                            <i class="fas fa-comment-dots text-5xl bg-gradient-to-r from-blue-400 to-indigo-500 bg-clip-text text-transparent"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-4 text-center">
+                            <span x-show="language === 'en'">Intelligent Chatbots</span>
+                            <span x-show="language === 'ro'">Chatboți Inteligenți</span>
+                        </h3>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            <span x-show="language === 'en'">Custom AI chatbots that understand natural language and provide personalized assistance to your customers 24/7.</span>
+                            <span x-show="language === 'ro'">Chatboți AI personalizați care înțeleg limbajul natural și oferă asistență personalizată clienților dvs. 24/7.</span>
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Voice-enabled AI Assistants -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                    <div class="h-3 bg-gradient-to-r from-indigo-500 to-purple-600"></div>
+                    <div class="p-8">
+                        <div class="mb-6 text-center">
+                            <i class="fas fa-microphone-alt text-5xl bg-gradient-to-r from-indigo-400 to-purple-500 bg-clip-text text-transparent"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-4 text-center">
+                            <span x-show="language === 'en'">Voice-Enabled Assistants</span>
+                            <span x-show="language === 'ro'">Asistenți Vocali</span>
+                        </h3>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            <span x-show="language === 'en'">Sophisticated voice-enabled AI solutions that transform how users interact with your applications through natural, conversational interfaces.</span>
+                            <span x-show="language === 'ro'">Soluții AI cu voce, care transformă modul în care utilizatorii interacționează cu aplicațiile dvs. prin interfețe conversaționale naturale.</span>
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Data Analysis & Insights -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden transform hover:scale-105 transition-transform duration-300">
+                    <div class="h-3 bg-gradient-to-r from-purple-500 to-pink-600"></div>
+                    <div class="p-8">
+                        <div class="mb-6 text-center">
+                            <i class="fas fa-brain text-5xl bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent"></i>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-4 text-center">
+                            <span x-show="language === 'en'">Predictive Analytics</span>
+                            <span x-show="language === 'ro'">Analiză Predictivă</span>
+                        </h3>
+                        <p class="text-gray-700 dark:text-gray-300">
+                            <span x-show="language === 'en'">AI-powered data analysis tools that uncover patterns, predict trends, and deliver actionable insights to drive informed business decisions.</span>
+                            <span x-show="language === 'ro'">Instrumente de analiză a datelor bazate pe AI care descoperă tipare, prezic tendințe și oferă informații acționabile pentru a susține decizii de afaceri informate.</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-12 text-center">
+                <a href="#contact" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white py-3 px-8 rounded-lg transition-colors duration-200 shadow-lg">
+                    <span x-show="language === 'en'">Explore AI Solutions</span>
+                    <span x-show="language === 'ro'">Explorează Soluțiile AI</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="py-16 bg-gray-50 dark:bg-gray-800 transition-colors duration-200">
