--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     </section>
 
 
-    <!-- Portfolio Section -->
+    <!-- Projects Section -->
     <section id="portfolio" class="py-16 bg-gray-50 dark:bg-gray-800 transition-colors duration-200">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-12">
@@ -796,6 +796,7 @@
         </button>
     </footer>
 
+    <!-- Cookie banner -->
     <div x-data="{ showCookieConsent: !localStorage.getItem('cookieConsent') }"
     x-show="showCookieConsent"
     class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 z-50">
