--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
                 <a href="#portfolio" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
-                    <span x-show="language === 'en'">Portfolio</span>
-                    <span x-show="language === 'ro'">Portofoliu</span>
+                    <span x-show="language === 'en'">Projects</span>
+                    <span x-show="language === 'ro'">Proiecte</span>
                 </a>
                 <a href="#contact" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
@@ -257,8 +257,8 @@
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
                 <a href="#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
-                    <span x-show="language === 'en'">Portfolio</span>
-                    <span x-show="language === 'ro'">Portofoliu</span>
+                    <span x-show="language === 'en'">Projects</span>
+                    <span x-show="language === 'ro'">Proiecte</span>
                 </a>
                 <a href="#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
@@ -707,7 +707,7 @@
                             <span x-show="language === 'en'">Chamber of Commerce No: J2019000010029</span>
                             <span x-show="language === 'ro'">Nr. Reg. Com.: J2019000010029</span>
                         </li>
-                        <li class="text-sm">
+                        <li>
                             <span x-show="language === 'en'">Address: Calea Aurel Vlaicu 57, Bl. U5, Sc. A, Ap. 12, 310350, Arad, Romania</span>
                             <span x-show="language === 'ro'">Adresa: Calea Aurel Vlaicu 57, Bl. U5, Sc. A, Ap. 12, 310350, Arad, Jud. Arad</span>
                         </li>
