added privacy cookes ans terms

--- a/index.html
+++ b/index.html
@@ -750,19 +750,19 @@
                     </h3>
                     <ul class="space-y-2">
                         <li>
-                            <a href="#" class="text-gray-400 hover:text-white transition-colors">
+                            <a href="privacy.html" class="text-gray-400 hover:text-white transition-colors">
                                 <span x-show="language === 'en'">Privacy Policy</span>
                                 <span x-show="language === 'ro'">Politica de Confidențialitate</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="text-gray-400 hover:text-white transition-colors">
+                            <a href="cookies.html" class="text-gray-400 hover:text-white transition-colors">
                                 <span x-show="language === 'en'">Cookie Policy</span>
                                 <span x-show="language === 'ro'">Politica de Cookie-uri</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="text-gray-400 hover:text-white transition-colors">
+                            <a href="terms.html" class="text-gray-400 hover:text-white transition-colors">
                                 <span x-show="language === 'en'">Terms of Service</span>
                                 <span x-show="language === 'ro'">Termeni și Condiții</span>
                             </a>
