--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
         }
 
         .focus-visible:focus {
-            @apply ring-2 ring-blue-600 ring-offset-2;
+            outline: 2px solid #2563eb;
+            outline-offset: 2px;
+            box-shadow: 0 0 0 2px #fff, 0 0 0 4px #2563eb;
         }
     </style>
 </head>
