--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@
                 </div>
 
                 <!-- Dark Mode Toggle -->
-                <button
-                    @click="darkMode = !darkMode"
+                <button                    @click="darkMode = !darkMode"
                     class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors"
                     :aria-label="darkMode ? 'Switch to light mode' : 'Switch to dark mode'"
                     aria-pressed="darkMode"
