--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     <section
         aria-labelledby="ai-solutions-title"
         id="ai-solutions"
-        class="py-16 bg-gradient-to-br from-indigo-50"
+        class="py-16 bg-gradient-to-br from-indigo-50 dark:from-gray-800 dark:to-gray-900"
         role="region"
         aria-roledescription="AI Solutions"
     >
@@ -561,7 +561,8 @@
                 <span x-show="language === 'ro'">Soluții Bazate pe Inteligență Artificială</span>
             </h2>
 
-            <p class="text-center text-gray-700 dark:text-gray-300 max-w-3xl mx-auto mb-12">
+            <!-- Updated subtitle with better dark mode contrast -->
+            <p class="text-center text-gray-700 dark:text-gray-200 max-w-3xl mx-auto mb-12">
                 <span x-show="language === 'en'">Harness the power of artificial intelligence to transform your business processes and customer experiences.</span>
                 <span x-show="language === 'ro'">Valorificați puterea inteligenței artificiale pentru a transforma procesele de afaceri și experiențele clienților.</span>
             </p>
