--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
     :class="darkMode ? 'dark bg-gray-900 text-white' : 'bg-white text-gray-900'"
 >
 
-<!-- Add skip link at the very top -->
 <a href="#main-content"
    class="skip-link"
    aria-label="Skip to main content">
@@ -273,6 +272,12 @@
                    aria-label="View our services">
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
+                </a>
+                <a href="#ai-solutions"
+                   class="text-gray-900 dark:text-gray-100 hover:text-blue-700 dark:hover:text-blue-400 transition-colors font-medium"
+                   aria-label="View our services">
+                    <span x-show="language === 'en'">AI Solutions</span>
+                    <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
                 <a href="#portfolio" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
@@ -344,6 +349,10 @@
                 <a href="#services" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
+                </a>
+                <a href="#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                    <span x-show="language === 'en'">AI Solutions</span>
+                    <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
                 <a href="#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
@@ -905,6 +914,14 @@
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">Services</span>
                             <span x-show="language === 'ro'">Servicii</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#ai-solutions"
+                           class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
+                           aria-label="Go to services section">
+                            <span x-show="language === 'en'">AI Solutions</span>
+                            <span x-show="language === 'ro'">Solutii AI</span>
                         </a>
                     </li>
                     <li>
