--- a/privacy.html
+++ b/privacy.html
@@ -259,7 +259,7 @@
     <nav role="navigation" aria-label="Main navigation">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <!-- Logo -->
-            <a href="#"
+            <a href="index.html"
                class="logo text-blue-700 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 transition-colors"
                aria-label="Cubevo Data Concept - Return to homepage">
                 cub<span class="mirrored-e">e</span>vo
@@ -267,23 +267,23 @@
 
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8">
-                <a href="#services"
+                <a href="index.html#services"
                    class="text-gray-900 dark:text-gray-100 hover:text-blue-700 dark:hover:text-blue-400 transition-colors font-medium"
                    aria-label="View our services">
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
-                <a href="#ai-solutions"
+                <a href="index.html#ai-solutions"
                    class="text-gray-900 dark:text-gray-100 hover:text-blue-700 dark:hover:text-blue-400 transition-colors font-medium"
                    aria-label="View our services">
                     <span x-show="language === 'en'">AI Solutions</span>
                     <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
-                <a href="#portfolio" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#portfolio" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
                     <span x-show="language === 'ro'">Proiecte</span>
                 </a>
-                <a href="#contact" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#contact" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
                     <span x-show="language === 'ro'">Contact</span>
                 </a>
@@ -346,19 +346,19 @@
             x-transition:leave-end="opacity-0 transform -translate-y-4"
             class="md:hidden bg-white dark:bg-gray-900 shadow-md">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-4">
-                <a href="#services" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#services" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
-                <a href="#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">AI Solutions</span>
                     <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
-                <a href="#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
                     <span x-show="language === 'ro'">Proiecte</span>
                 </a>
-                <a href="#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
                     <span x-show="language === 'ro'">Contact</span>
                 </a>
@@ -599,7 +599,7 @@
         >
             <!-- Company Info -->
             <div role="contentinfo" aria-label="Company information">
-                <a href="#"
+                <a href="index.html"
                    class="logo text-blue-700 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 transition-colors"
                    aria-label="Cubevo Data Concept - Return to homepage">
                     cub<span class="mirrored-e">e</span>vo
@@ -657,7 +657,7 @@
                 </h2>
                 <ul class="space-y-2">
                     <li>
-                        <a href="#services"
+                        <a href="index.html#services"
                            class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">Services</span>
@@ -665,7 +665,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#ai-solutions"
+                        <a href="index.html#ai-solutions"
                            class="text-gray-400 hover:text-white transition-colors underline-offset-2 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-400 rounded-sm"
                            aria-label="Go to services section">
                             <span x-show="language === 'en'">AI Solutions</span>
@@ -673,13 +673,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="text-gray-400 hover:text-white transition-colors">
+                        <a href="index.html#portfolio" class="text-gray-400 hover:text-white transition-colors">
                             <span x-show="language === 'en'">Portfolio</span>
                             <span x-show="language === 'ro'">Portofoliu</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#contact" class="text-gray-400 hover:text-white transition-colors">
+                        <a href="index.html#contact" class="text-gray-400 hover:text-white transition-colors">
                             <span x-show="language === 'en'">Contact</span>
                             <span x-show="language === 'ro'">Contact</span>
                         </a>
