--- a/index.html
+++ b/index.html
@@ -350,15 +350,15 @@
                     <span x-show="language === 'en'">Services</span>
                     <span x-show="language === 'ro'">Servicii</span>
                 </a>
-                <a href="#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#ai-solutions" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">AI Solutions</span>
                     <span x-show="language === 'ro'">Solutii AI</span>
                 </a>
-                <a href="#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#portfolio" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
                     <span x-show="language === 'ro'">Proiecte</span>
                 </a>
-                <a href="#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
+                <a href="index.html#contact" @click="menuOpen = false" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Contact</span>
                     <span x-show="language === 'ro'">Contact</span>
                 </a>
